Entity creation - Currency

--- a/.env
+++ b/.env
@@ -28,5 +28,5 @@ APP_SECRET=461dc8a7654d03ddc0af3a7d12a27627
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 DATABASE_URL="mysql://dominik:123@127.0.0.1:3306/zadanie_testowe"
-DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
+# DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
